--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
-    "express": "^4.16.2",
+    "express": "^4.17.1",
+    "helmet": "^3.21.2",
     "mongoose": "^4.12.3"
   }
 }
